2013-07-31 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: reduced the char lenght of title in
	the header for to avoid crash when have title with wide chars.

2013-07-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fix a if condition
	broken for a previous test code

	* godmode/groups/group_list.php: Fix propagate ACL 
	field when create group

	* godmode/groups/configure_group.php: Fixed pure parameter

	* godmode/users/configure_user.php: Fixed autohidding of fields in 
	user edition due return avoiding javascript code

2013-07-31 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.php: added dinamic tab.
	
	* images/dynamic_network_icon.png: added a Carla's icon for the
	dinamic tab.

2013-07-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.list_items.php: Add the
	pure parameter to sort arrows in reporting view

2013-07-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* ChangeLog: Fixes changelog.

2013-07-30  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/module.php
	extensions/insert_data.php
	operation/tree.php
	operation/reporting/reporting_viewer.php
	operation/reporting/graph_viewer.php
	operation/agentes/datos_agente.php
	godmode/agentes/planned_downtime.editor.php
	godmode/alerts/configure_alert_template.php
	godmode/reporting/reporting_builder.item_editor.php: Change 
	the inclusion of timepicker language file from jquery include
	function to manually way to avoid jQuery errors

2013-07-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.ajax.php,
	godmode/agentes/configurar_agente.php, include/functions_html.php,
	include/functions_networkmap.php: cleaned source code and removed
	the debug traces.
	
	* godmode/agentes/module_manager_editor_prediction.php,
	include/constants.php: fixed the repeat operator and added some
	constants for to make more easy the code.
	
	Fixes: #2279
